fix spacing and respomse

--- a/nsbe/src/components/Navbar.css
+++ b/nsbe/src/components/Navbar.css
@@ -76,7 +76,7 @@
     display: none;
   }
   
-  @media screen and (max-width: 750px) {
+  @media screen and (max-width: 780px) {
 
   
     .nav-menu {
