--- a/nsbe/src/components/pages/About.css
+++ b/nsbe/src/components/pages/About.css
@@ -84,11 +84,11 @@
 }
 .container .card .content h3{
     margin-bottom: 5px;
-    font-size: 30px;
+    font-size: 20px;
     color: green;
 }
 .container .card .content p{
-    font-size: 20px;
+    font-size: 15px;
 }
 
 
@@ -104,7 +104,7 @@
     }
 }
 
-@media (max-width:750px)
+@media (max-width:770px)
 {
         .container .card{
             max-width:300px;
@@ -134,11 +134,11 @@
         }
         .container .card .content h3{
             margin-bottom: 5px;
-            font-size: 25px;
+            font-size: 20px;
             color: green;
         }
         .container .card .content p{
-            font-size: 15px;
+            font-size: 12px;
         }
     
 }
