--- a/nsbe/src/components/pages/Home.css
+++ b/nsbe/src/components/pages/Home.css
@@ -56,7 +56,7 @@
     border-radius: 2px;
 }
 
-@media (max-width: 750px) {
+@media (max-width: 780px) {
   .header-text{
     padding-bottom: 45rem;
     font-weight: normal;
