--- a/nsbe/src/components/pages/Programs.css
+++ b/nsbe/src/components/pages/Programs.css
@@ -30,7 +30,7 @@
 .content-team{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
 }
 
 .card-team{
@@ -39,6 +39,7 @@
    overflow: hidden;
    cursor: pointer;
    border: 5px solid #fff;
+   margin: 5px;
    margin-bottom: 20px;
 }
 
